# roots-of-equations

./: Makefile  README.md  bisection.py  equations.py  main.py  newton.py  pyproject.toml  secant.py
